# esp32_xcas

./: .gitignore  CMakeLists.txt  README.md  decode_shot.ps1  partitions_example.csv  partitions_tab5.csv  sdkconfig.defaults  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s3
components/cardputer_bsp/: CMakeLists.txt  cardputer_bsp.cpp
components/cardputer_bsp/include/cardputer_bsp/: cardputer_bsp.hpp
components/giac/: CMakeLists.txt
components/giac/src/: cocoa_stub.cc  config.h  csturm.cc  global.cc  graph_stubs.cc  help.cc  kdisplay.h  libbf.c  misc.cc  signalprocessing.cc  solve.h  static_lexer.h  static_lexer_.h  tex.cc
docs/: math_layout_engine_tasklist.md  mathlayout_canvas_symbol_todo.md  mathlayout_symbol_probe_report.md
main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  cardputer_bsp.cpp  cardputer_bsp.hpp  cmd_xcas.cpp  cmd_xcas.h  console_example_main.c  idf_component.yml  xcas_service.cpp  xcas_service.hpp  xcas_ui.cpp  xcas_ui.hpp
main/brookesia/apps/: calc_app.cpp  calc_app.hpp  files_app.cpp  files_app.hpp  fs_util.cpp  fs_util.hpp  graph_app.cpp  graph_app.hpp  placeholder_app.cpp  placeholder_app.hpp  project_app.cpp  project_app.hpp  settings_app.cpp  settings_app.hpp
main/brookesia/core/: app.hpp  app_settings.cpp  app_settings.hpp  kernel.cpp  kernel.hpp  router.hpp  service_hub.hpp  ui_fonts.cpp  ui_fonts.hpp  ui_theme.cpp  ui_theme.hpp
main/brookesia/manifest/: builtin_apps.json
main/container/: app_container.cpp  app_container.hpp  app_lifecycle.hpp  router.hpp  service_bus.hpp
main/fonts/: lv_font_noto_math_14.c  lv_font_noto_math_18.c  lv_font_noto_math_22.c  lv_font_symbols_14.c  lv_font_symbols_18.c  lv_font_symbols_22.c
main/mathlayout/: math_types.hpp
main/mathlayout/ast/: math_expr.hpp
main/mathlayout/font/: font_metrics.hpp  font_metrics_lvgl.cpp
main/mathlayout/layout/: layout_box.hpp  layout_debug_dump.cpp  layout_debug_dump.hpp  layout_engine.cpp  layout_engine.hpp
main/mathlayout/paint/: math_painter.cpp  math_painter.hpp
main/mathlayout/render/: text_renderer.cpp  text_renderer.hpp
tools/: lv_font_probe_symbols_14.c  mathlayout_b3_formulas.txt  mathlayout_bracket_probe_cases.txt  mathlayout_c1_formulas.txt  mathlayout_c2c3_formulas.txt  mathlayout_canvas_spike_cases.txt  mathlayout_formula_export_extended.txt  mathlayout_formula_export_probe.txt  mathlayout_formulas.txt  mathlayout_render_probe_cases.txt  mathlayout_stretch_probe_cases.txt  mathlayout_symbol_probe_cases.txt  mathlayout_vector_submit_cases.txt  ml_render_batch_test.ps1  ml_render_cases.txt  ml_render_test.ps1  serial_formula_render_capture.ps1  serial_mathlayout_capture.ps1  serial_mathlayout_submit_capture.ps1  serial_matrix_fallback_probe.ps1  serial_preview_capture.ps1  serial_preview_capture_input_row.ps1  serial_preview_stability_probe.ps1  tmp_one_formula.txt  tmp_preview_case_03.txt  tmp_preview_cases.txt  tmp_preview_single_case.txt  tmp_preview_stress_cases.txt
